--- a/drupal/sites/all/themes/tp4/sass/page/_campaigns.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_campaigns.scss
@@ -59,7 +59,7 @@ body.campaign-display
 
     .title-wrapper + {
       .left-column, .left-column + .right-column, .right-column, .center-column {
-        margin-top: 6px;
+        margin-top: 5px;
       }
     }
 
